--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -95,8 +95,9 @@ background: url(images/header3.jpg); margin:10px auto;
 
 #nav {
   position: relative;
-  padding:-24px;
+  padding:-53px;
   height: 9em;
+  /*
   border: 1px solid rgba(0,0,0,.1);
   background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
   
@@ -106,9 +107,9 @@ background: url(images/header3.jpg); margin:10px auto;
   font-size: 80%;
   line-height: 1.5;
   border-width: 10px;
-  border-left-width: 0px;
+  border-left-width: 0px; */
 }
-*/
+
 #rosette { position:relative; left:785px; top: 0px;
 }
 /*
@@ -1251,8 +1252,7 @@ html {
 @-o-viewport {
   width: device-width; }
 
-@viewport {
-  width: device-width; }
+
 
 audio, canvas, video {
   display: inline-block;
@@ -3848,334 +3848,3 @@ p.lft { text-align:left; margin-top: 1px;
 }
 p.right {text-align:right; 
 }
-@media (min-width: 48em) {
-  #nav ul {
-    /* older flexbox */
-    display: -ms-flexbox;
-    flex-direction: -ms-row;
-    display: -webkit-box;
-    display: -moz-box;
-    display: box;
-    -webkit-box-orient: horizontal;
-    -moz-box-orient: horizontal;
-    box-orient: horizontal;
-    /* newer flexbox */
-    display: flex;
-    flex-direction: row;
-  }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
