--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -369,7 +369,7 @@ height:42px;
 /* set vertical button menu position */
 nav#nav {width:130px; float:left; position: relative; top: -20px;
 }
-ul	{  margin-left:0; padding-left:0;   
+ul	{  margin-left:-70px; padding-left:0;   
 }
 /* set general side button styles */
 li { width:115px; list-style-type :none; margin-bottom: 3px; text-align: center; 
