--- a/horiz-vert-menu.css
+++ b/horiz-vert-menu.css
@@ -367,7 +367,7 @@ height:42px;
 #hnav li a:active 	{ background:#ABCBFF;  border: 4px inset #ABCBFF; 
 }
 /* set vertical button menu position */
-nav#nav {width:130px; float:left; position: relative; top: -4em;
+nav#nav {width:130px; float:left; position: relative; top: -4em; left:4em;
 }
 ul	{  margin-left:-70px; padding-left:0;   
 }
