--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -11,26 +11,26 @@ header {width:920px; height:180px; padding:0; border:10px solid hsla(0, 0%,100%,
   background: url(/CSS/images/header3.jpg); margin:50px auto; 
 }
 */
-header {width:57.6rem; margin-left: -1px; height:156px; position: relative; top: -20px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
+header#ch1-7header {width:57.6rem; margin-left: -1px; height:156px; position: relative; top: -20px; background-image:url('images/header2.jpg'); text-align:center; border-top:10px white solid;  border-left:10px white solid;
 border-right:10px white solid; border-bottom:10px white solid; background-repeat:no-repeat; background-position:center top;}
 h1 { font-size:xxx-large; color :white; position: relative; left:90px; top: 80px; width:650px; 
 }
 #rosette { position:relative; left:380px; top:-30px; }
-#content { background-color:transparent; border-left:10px solid hsla(0, 0%,100%,.5); border-right:10px solid hsla(0, 0%,100%,.5); 
+div#Ch1-7content.data { background-color:transparent; border-left:10px solid hsla(0, 0%,100%,.5); border-right:10px solid hsla(0, 0%,100%,.5); 
 border-bottom:10px solid hsla(0, 0%,100%,.5); width: 904px; margin-top:-20px; margin-left:0; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 h2 { font-size:100%; color:white; margin:0 0 10px 
 }
 h3 { font-size:100%; color:white; margin:0 0 6px 0; 
 }
-#leftcol { float:left; width: 310px; vertical-align:top; 
+div#Ch1-7leftcol.data { float:left; width: 310px; vertical-align:top; 
 }
-#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+div#Ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
+div#Ch1-7midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /* set side menu block position and width*/
-nav#nav { margin:10px 30px 0 10px; width:135px; 
+nav#ch1-7nav { margin:10px 30px 0 10px; width:135px; 
 }
 /*Set list style within the menu block only. This removes bullets*/
 nav li { list-style-type:none; 
