--- a/Practical HTML5 Projects/Code01/HTML5-style-2.css
+++ b/Practical HTML5 Projects/Code01/HTML5-style-2.css
@@ -38,13 +38,13 @@ h1 {
   width: 480px;
 }
 
-#rosette {
+#html5style2rosette {
   position: relative;
   left: 750px;
   top: 5px;
 }
 
-#content {
+#html5style2content {
   background-color: transparent;
   border-left: 10px white solid;
   border-right: 10px white solid;
@@ -70,7 +70,7 @@ h3 {
   margin: 0 0 6px 0;
 }
 
-#leftcol {
+#html5style2leftcol {
   float: left;
   width: 310px;
   vertical-align: top;
@@ -78,7 +78,7 @@ h3 {
 
 /*#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-#midcol {
+#html5style2midcol {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: 10px;
