--- a/Practical HTML5 Projects/Code01/HTML5-style-2.css
+++ b/Practical HTML5 Projects/Code01/HTML5-style-2.css
@@ -1,22 +1,10 @@
 /*equalise for various browsers and change #header to header*/
-div body header #content {
-  margin: 0;
-  padding: 0;
-  border: 0;
+div body header #content { margin: 0; padding: 0; border: 0;
 }
-
-body {
-  background: #FFF url(images/green-grad.jpg) repeat-x;
-  margin: auto;
+body { background: #FFF url(images/green-grad.jpg) repeat-x; margin: auto;
 }
-
 /*add display attributes for the semantic tags*/
-header,
-footer,
-section,
-article,
-nav {
-  display: block;
+header, footer, section, article, nav { display: block;
 }
 
 /*remove the # from #header*/
@@ -30,11 +18,11 @@ header#html5style2header.data {
 }
 
 h1 {
-  font-size: 100%;
+  font-size: 300%;
   color: white;
   position: relative;
   left: 90px;
-  top: -3px;
+  top: 55px;
   width: 480px;
 }
 
