--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -4191,8 +4191,8 @@ vertical-align:top;
 #midcontent { margin:0 135px 0 145px; text-align:center;
 }
 #content { background-color:transparent; border-left:10px white solid;
-border-right:10px white solid; border-bottom:10px white solid; width: 904px;
-margin-top:120px; margin-left:auto; margin-right:auto; padding:8px;
+border-right:10px white solid; border-bottom:10px white solid; width: 944px;
+margin-top:80px; margin-left:-10px; margin-right:auto; padding:8px;
 font-size:100%; color:maroon;
 }
 footer {text-align:center; clear:both;
