--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -4232,7 +4232,7 @@ height:42px;
 #hnav li a:active 	{ background:#ABCBFF;  border: 4px inset #ABCBFF; 
 }
 /* set vertical button menu position */
-nav {width:130px; float:left; position: relative; top: -20px;
+nav {width:130px; float:left; position: relative; top: -15px; left:10px;
 }
 ul	{  margin-left:0; padding-left:0;   
 }
