--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -38,7 +38,7 @@ nav li { list-style-type:none;
 /* set general side button styles */
 nav li { margin-bottom: 3px; text-align: center; width:130px;
 }
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 nav li a { display: block;
   font-weight: bold; 
 }
