--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -4240,7 +4240,7 @@ li { width:115px; list-style-type :none; margin-bottom: 3px; text-align: center;
 li a { display: block; width:115px; color: white; font-weight: bold; text-decoration: none 
 }
 /* specify state styles... */
-/* mouseout (default) */
+/* mouseout (default) *
 li a { background: #1A9CE0;  border: 4px outset #AABAFF;
 }
 /* mouseover */
