--- a/nav[1].css
+++ b/nav[1].css
@@ -64,10 +64,11 @@ body {
 #nav ul li a:hover {
   background: #138a72;
 }
-  */
+  *
 #nav ul li:last-of-type a {
   border-right: 0px;
 }
+*/
 #nav ul li ul li a {
   padding-left: 1.5em;
 }
