--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -339,7 +339,7 @@ ul	{  margin-left:0; padding-left:0;
 /* set general side button styles */
 li { width:115px; list-style-type :none; margin-bottom: 3px; text-align: center; 
 }
-/* set general anchor styles */
+/* set general anchor styles *
 li a { display: block; width:120px; color: white; font-weight: bold; text-decoration: none 
 }
 /* specify state styles... */
