--- a/CSS/transparent.css
+++ b/CSS/transparent.css
@@ -232,11 +232,11 @@ ul	{  margin-left:0; padding-left:0;
 /* set general side button styles */
 li { width:115px; list-style-type :none; margin-bottom: 3px; text-align: center; 
 }
-/* set general anchor styles */
+/* set general anchor styles *
 li a { display: block; width:115px; font-weight: bold; text-decoration: none 
 }
 /* specify state styles... */
-/* mouseout (default) */
+/* mouseout (default) *
 li a { background: #1A9CE0;  border: 4px outset #AABAFF;
 }
 /* mouseover */
