--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -222,10 +222,11 @@ h1 { font-size:xxx-large; color :white; position: relative; left:90px; top: 80px
 }
 #rosette { position:relative; left:380px; top:-30px; }
 
-
+/*
 #content { background-color:transparent; border-left:10px solid hsla(0, 0%,100%,.5); border-right:10px solid hsla(0, 0%,100%,.5); 
 border-bottom:10px solid hsla(0, 0%,100%,.5); width: 904px; margin-top:-50px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
+*/
 h2 { font-size:100%; color:white; margin:0 0 10px 
 }
 h3 { font-size:100%; color:white; margin:0 0 6px 0; 
@@ -234,7 +235,7 @@ h3 { font-size:100%; color:white; margin:0 0 6px 0;
 }
 #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
+#midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /* set side menu block position and width*/
 nav#nav { margin:10px 30px 0 10px; width:135px; 
