--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -21,7 +21,7 @@ h2 {font-size:large; font-family:"times new roman"; text-align:center;
 /*PAGE LAYOUT*/
 body {margin:auto; width:970px;
 }
-header {#
+header {
 }
 nav { float:left; margin-left:10px; width:115px;
 }
