--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -39,7 +39,7 @@ nav ul { margin-left:0; border:0; width:115px;
 #gallery-block { position:relative; left: 30px; top:10px;
 }
 /*set footer*/
-footer { clear:both; color:black; text-align:center; width:970px;
+footer { clear:both; color:black; text-align:center;
 }
 .clear { clear:both;
 }
