--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -2,7 +2,7 @@
 /* Listing 2-6b provides the CSS presentation instructions for a 3 column gallery set in a real world page.
 Listing 2-6b. The CSS Style Sheet for Listing 2-6a (gallery-page.css) */
 /*set attributes for consistent appearance in all browsers*/
-html, body, p, ul, li, h1, h2 { margin:0; padding:0;
+html, body, p, li, h1, h2 { margin:0; padding:0;
 }
 /*set images to have no borders*/
 img {
@@ -28,7 +28,7 @@ nav { float:left; margin-left:10px; width:115px;
 nav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#rightcol { width:150px; float:right; text-align:center;
+#rightcol { width:160px; float:right; text-align:center;
 }
 #rightcol p.advert {font-size:small; margin-top:190px;
 }
