--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -14,7 +14,7 @@ header, footer, section, article, nav { display:block;
 /*SET FONTS*/
 span.small { font-size:small;
 }
-h1 { font-size:300%; color:rebeccapurple; font-family:"times new roman"; text-align:center;
+h1 { font-size:300%; color:rgb(245, 202, 183); font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:100%; color: whitesmoke font-family:"times new roman"; text-align:center;
 }
