--- a/CSS/gallery-page-HTML5.css
+++ b/CSS/gallery-page-HTML5.css
@@ -21,13 +21,14 @@ h2 {font-size:large; font-family:"times new roman"; text-align:center;
 /*PAGE LAYOUT*/
 body {margin:auto; width:970px;
 }
-
+header { width:970px;
+} 
 nav { float:left; margin-left:10px; width:115px;
 }
 nav ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-#rightcol { width:160px; float:right; text-align:center;
+#rightcol { width:150px; float:right; text-align:center;
 }
 #rightcol p.advert {font-size:small; margin-top:190px;
 }
